# hotreload

./: .cz.yaml  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  API.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  DESIGN.md  Doxyfile  ELF_LOADER_DESIGN.md  GETTING_STARTED.md  HOW_IT_WORKS.md  Kconfig  LICENSE  README.md  TODO.md  idf_component.yml  idf_ext.py  partitions.csv  project_include.cmake  sdkconfig.defaults  test.sh  test_unity.py
.cache/clangd/index/: dummy.c.B0C093639E99F83C.idx  elf_loader.c.EA9217F58E03EDE1.idx  elf_loader.h.F1E08FDD5EEA8E9D.idx  elf_parser.c.AC8C6AD600972B25.idx  elf_parser.h.D7951641F3A47B15.idx  hotreload.c.87E52810FD0D191C.idx  reloadable.c.5CB8CE1211835761.idx  reloadable_util.c.6D4CA1A09D615C54.idx  reloadable_util.h.88AAF1FE1A27371A.idx  test_elf_loader.c.E390A4D5B399AFD9.idx  test_elf_parser.c.25A8FF3A0C9680C8.idx
components/elf_parser/: CMakeLists.txt  elf_parser.c
components/elf_parser/include/: elf_parser.h
components/hotreload/: CMakeLists.txt  elf_loader.c  hotreload.c
components/hotreload/include/: hotreload.h
components/reloadable/: CMakeLists.txt  gen_ld_script.py  gen_reloadable.py  reloadable.c  reloadable_util.c  reloadable_util.h
components/reloadable/include/: reloadable.h
elf_parser/reference/: elf_parser.cpp  elf_parser.hpp
examples/basic/: README.md  read_latest_dut_log.sh  test_hotreload.py
examples/basic/components/reloadable/: CMakeLists.txt
examples/basic/main/: CMakeLists.txt  hotreload.c  idf_component.yml  test_elf_parser.c
examples/basic/test_host/hotreload_tests/: CMakeLists.txt
include/: hotreload.h  reloadable_util.h
main/: CMakeLists.txt  hotreload.c  test_elf_parser.c
port/: elf_loader_mem.c  elf_loader_mem_port_default.c  elf_loader_mem_port_esp32.c  elf_loader_mem_port_esp32s2.c  elf_loader_mem_port_esp32s3.c  elf_loader_mem_port_riscv_id.c  elf_loader_reloc_riscv.c  elf_loader_reloc_xtensa.c  hotreload_crypto_mbedcrypto.c  hotreload_crypto_psa.c
private_include/: elf_loader.h  elf_loader_mem_port.h  elf_loader_port.h  hotreload_crypto.h
scripts/: gen_ld_script.py  gen_reloadable.py  run_all_tests.py  update_claude_md_structure.py
src/: elf_loader.c  elf_parser.c  hotreload.c  hotreload_server.c
test_apps/hotreload_test/: CMakeLists.txt  CMakePresets.json  README.md  conftest.py  sdkconfig.defaults  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32c3.qemu  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32s2  sdkconfig.defaults.esp32s2.nopsram  sdkconfig.defaults.esp32s3  sdkconfig.defaults.esp32s3.nopsram  sdkconfig.defaults.esp32s3.qemu  sdkconfig.defaults.hardware  sdkconfig.defaults.qemu  test_hotreload.py
test_apps/hotreload_test/components/reloadable/: CMakeLists.txt  reloadable.c
test_apps/hotreload_test/components/reloadable/include/: reloadable.h
test_apps/hotreload_test/components/test_defs/: CMakeLists.txt
test_apps/hotreload_test/main/: CMakeLists.txt  hotreload.c  idf_component.yml
test_apps/hotreload_test/test_host/hotreload_tests/: CMakeLists.txt  idf_component.yml  test_elf_loader.c
test_apps/hotreload_test/tests_build_system/: pytest.ini  test_rebuild_deps.py
test_host/hotreload_tests/: CMakeLists.txt  idf_component.yml  test_elf_loader.c
